[gd_scene load_steps=31 format=3 uid="uid://dbhfgknblto0f"]

[ext_resource type="Script" path="res://Assets/Script/battle_ground.gd" id="1_wpbp7"]
[ext_resource type="PackedScene" uid="uid://dctivcvvd5cq6" path="res://Assets/Scenes/player.tscn" id="2_flekx"]
[ext_resource type="PackedScene" uid="uid://xv3roen1j42f" path="res://Assets/Scenes/enemy.tscn" id="3_1ly5k"]
[ext_resource type="PackedScene" uid="uid://dlp0fpk14a5eg" path="res://Assets/Scenes/hud.tscn" id="4_bi3dm"]
[ext_resource type="AudioStream" uid="uid://bij2pe0pib1wh" path="res://Assets/Resources/audio/laser.ogg" id="4_g1uli"]
[ext_resource type="PackedScene" uid="uid://bvdb1k8q1125e" path="res://Assets/Scenes/burst_enemy.tscn" id="4_v1h16"]
[ext_resource type="PackedScene" uid="uid://b1nqawclvaxha" path="res://Assets/Scenes/game_over_screen.tscn" id="5_7r8yv"]
[ext_resource type="AudioStream" uid="uid://vufwlp7xv6x2" path="res://Assets/Resources/audio/hit.wav" id="5_xfhrd"]
[ext_resource type="AudioStream" uid="uid://c7qsraxn3cqmp" path="res://Assets/Resources/audio/explode.wav" id="6_04a1p"]
[ext_resource type="Texture2D" uid="uid://b07wldsnggcrx" path="res://Assets/Art/speed.png" id="6_gnapi"]
[ext_resource type="Texture2D" uid="uid://bptutawc4r50r" path="res://Assets/Art/462544050_1308114687210240_4620716762410217206_n (3).png" id="7_2tcpd"]
[ext_resource type="Script" path="res://Assets/Script/pause.gd" id="9_cbogb"]
[ext_resource type="FontFile" uid="uid://c80ctkfp0xdeo" path="res://Assets/Art/Another Art/clacon2.woff2" id="9_vxl5w"]
[ext_resource type="PackedScene" uid="uid://feohf5in18n5" path="res://Assets/Scenes/touch_buttons.tscn" id="14_hw3nd"]
[ext_resource type="Script" path="res://Assets/Script/about_game.gd" id="15_02lc5"]
[ext_resource type="Texture2D" uid="uid://ci7013scnbcyf" path="res://Assets/TutorialInfo/Icons/Help_Icon.png" id="16_dhdjc"]
[ext_resource type="PackedScene" uid="uid://cbiygpvyc548x" path="res://Assets/Scenes/medkit_description.tscn" id="17_rppyl"]
[ext_resource type="PackedScene" uid="uid://drutcsfbnye03" path="res://Assets/Scenes/anti_virus_description.tscn" id="18_xytp0"]
[ext_resource type="PackedScene" uid="uid://yvbwn06a0mlr" path="res://Assets/Scenes/shield_description.tscn" id="20_erl30"]
[ext_resource type="PackedScene" uid="uid://dxof6c7whvbf2" path="res://Assets/Scenes/firewall_description.tscn" id="20_uaw4v"]
[ext_resource type="PackedScene" uid="uid://sg5gihu0kp3" path="res://Assets/Scenes/p_rockets_description.tscn" id="21_eey0t"]
[ext_resource type="PackedScene" uid="uid://bgta6nm8ey38v" path="res://Assets/Scenes/dpb_description.tscn" id="22_xc2yw"]
[ext_resource type="PackedScene" uid="uid://fyj11wk464yy" path="res://Assets/Scenes/most_ignore_rule_description.tscn" id="23_13noq"]
[ext_resource type="Texture2D" uid="uid://cq1y6pmhyxxcr" path="res://Assets/Art/Another Art/CasualIcons_038.png" id="24_5186w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xy3ag"]
bg_color = Color(0.144567, 0.0510232, 0.206851, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_k0bta"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhb26"]
bg_color = Color(0.00434902, 0.114253, 0.201006, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_a4pxt"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u5s56"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(270, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = -1000.0
initial_velocity_max = -1000.0
gravity = Vector3(0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7tfj"]
size = Vector2(70, 70)

[node name="BattleGround" type="Node2D"]
script = ExtResource("1_wpbp7")
enemy_spaceship_scene = Array[PackedScene]([ExtResource("3_1ly5k"), ExtResource("4_v1h16")])

[node name="SFX" type="Node" parent="."]

[node name="BulletSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_g1uli")

[node name="HitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_xfhrd")

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_04a1p")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_bi3dm")]

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("5_7r8yv")]
visible = false

[node name="PauseUI" type="CanvasLayer" parent="."]

[node name="Pause" type="Node" parent="PauseUI"]
script = ExtResource("9_cbogb")

[node name="PausePanel" type="Panel" parent="PauseUI/Pause"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseUI/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -150.0
offset_right = 137.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7068, 0.5115, 0.93, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("9_vxl5w")
theme_override_font_sizes/font_size = 61
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="PauseUI/Pause/PausePanel"]
process_mode = 3
layout_mode = 2
offset_left = 150.0
offset_top = 450.0
offset_right = 391.0
offset_bottom = 520.0
theme_override_colors/font_color = Color(0.69552, 0.4128, 0.96, 1)
theme_override_fonts/font = ExtResource("9_vxl5w")
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_xy3ag")
text = "Resume"

[node name="Resume" type="TouchScreenButton" parent="PauseUI/Pause/PausePanel/Resume"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(242, 70)
texture_normal = SubResource("CanvasTexture_k0bta")

[node name="Quit" type="Button" parent="PauseUI/Pause/PausePanel"]
process_mode = 3
layout_mode = 2
offset_left = 150.0
offset_top = 550.0
offset_right = 391.0
offset_bottom = 620.0
theme_override_fonts/font = ExtResource("9_vxl5w")
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_hhb26")
text = "Quit"

[node name="Quit" type="TouchScreenButton" parent="PauseUI/Pause/PausePanel/Quit"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(238, 70)
texture_normal = SubResource("CanvasTexture_a4pxt")

[node name="SpeedParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(270, -50)
amount = 20
process_material = SubResource("ParticleProcessMaterial_u5s56")
texture = ExtResource("6_gnapi")
lifetime = 1.25
preprocess = 5.0

[node name="EnemySpawnpoint" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("2_flekx")]
position = Vector2(440, 572)

[node name="PlayerSpawnpoint" type="Marker2D" parent="."]
position = Vector2(261, 873)

[node name="BulletContainer" type="Node2D" parent="."]
position = Vector2(0, -30)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="PowerUpContainer" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="CyberpunkWorld" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 1
scale = Vector2(1.084, 3.99)
texture = ExtResource("7_2tcpd")
centered = false
region_rect = Rect2(0, 0, 540, 960)

[node name="TouchButtons" parent="." instance=ExtResource("14_hw3nd")]

[node name="AboutGame" type="Node" parent="."]
script = ExtResource("15_02lc5")

[node name="gameabout" type="TouchScreenButton" parent="AboutGame"]
position = Vector2(476, 83)
texture_normal = ExtResource("16_dhdjc")

[node name="FirstCollidePowerUp" type="CanvasLayer" parent="."]

[node name="AntiVirusDescription" parent="FirstCollidePowerUp" instance=ExtResource("18_xytp0")]
visible = false

[node name="exit_bttn_of_AntiVirus" type="Button" parent="FirstCollidePowerUp/AntiVirusDescription"]
process_mode = 3
layout_mode = 0
offset_left = 445.0
offset_top = 253.0
offset_right = 517.0
offset_bottom = 325.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("24_5186w")

[node name="exit_mobile" type="TouchScreenButton" parent="FirstCollidePowerUp/AntiVirusDescription/exit_bttn_of_AntiVirus"]
position = Vector2(36, 36)
shape = SubResource("RectangleShape2D_b7tfj")

[node name="MedkitDescription" parent="FirstCollidePowerUp" instance=ExtResource("17_rppyl")]
visible = false

[node name="exit_bttn_of_Medkit" type="Button" parent="FirstCollidePowerUp/MedkitDescription"]
process_mode = 3
layout_mode = 0
offset_left = 460.0
offset_top = 254.0
offset_right = 532.0
offset_bottom = 326.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("24_5186w")

[node name="exit_mobile" type="TouchScreenButton" parent="FirstCollidePowerUp/MedkitDescription/exit_bttn_of_Medkit"]
position = Vector2(36, 36)
shape = SubResource("RectangleShape2D_b7tfj")

[node name="FirewallDescription" parent="FirstCollidePowerUp" instance=ExtResource("20_uaw4v")]
visible = false

[node name="exit_bttn_of_Firewall" type="Button" parent="FirstCollidePowerUp/FirewallDescription"]
process_mode = 3
layout_mode = 0
offset_left = 473.0
offset_top = 251.0
offset_right = 545.0
offset_bottom = 323.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("24_5186w")

[node name="exit_mobile" type="TouchScreenButton" parent="FirstCollidePowerUp/FirewallDescription/exit_bttn_of_Firewall"]
position = Vector2(36, 36)
shape = SubResource("RectangleShape2D_b7tfj")

[node name="ShieldDescription" parent="FirstCollidePowerUp" instance=ExtResource("20_erl30")]
visible = false

[node name="exit_bttn_of_EShields" type="Button" parent="FirstCollidePowerUp/ShieldDescription"]
process_mode = 3
layout_mode = 0
offset_left = 443.0
offset_top = 322.0
offset_right = 515.0
offset_bottom = 394.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("24_5186w")

[node name="exit_mobile" type="TouchScreenButton" parent="FirstCollidePowerUp/ShieldDescription/exit_bttn_of_EShields"]
position = Vector2(36, 36)
shape = SubResource("RectangleShape2D_b7tfj")

[node name="PassRocketsDescription" parent="FirstCollidePowerUp" instance=ExtResource("21_eey0t")]
visible = false

[node name="exit_bttn_of_PassRockets" type="Button" parent="FirstCollidePowerUp/PassRocketsDescription"]
process_mode = 3
layout_mode = 0
offset_left = 449.0
offset_top = 248.0
offset_right = 521.0
offset_bottom = 320.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("24_5186w")

[node name="exit_mobile" type="TouchScreenButton" parent="FirstCollidePowerUp/PassRocketsDescription/exit_bttn_of_PassRockets"]
position = Vector2(36, 36)
shape = SubResource("RectangleShape2D_b7tfj")

[node name="DPBDescription" parent="FirstCollidePowerUp" instance=ExtResource("22_xc2yw")]
visible = false

[node name="exit_bttn_of_DPB" type="Button" parent="FirstCollidePowerUp/DPBDescription"]
process_mode = 3
layout_mode = 0
offset_left = 457.0
offset_top = 334.0
offset_right = 529.0
offset_bottom = 406.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("24_5186w")

[node name="exit_mobile" type="TouchScreenButton" parent="FirstCollidePowerUp/DPBDescription/exit_bttn_of_DPB"]
position = Vector2(36, 36)
shape = SubResource("RectangleShape2D_b7tfj")

[node name="MostIgnoreRuleDescription" parent="FirstCollidePowerUp" instance=ExtResource("23_13noq")]
visible = false

[node name="exit_bttn_of_MIR" type="Button" parent="FirstCollidePowerUp/MostIgnoreRuleDescription"]
process_mode = 3
layout_mode = 0
offset_left = 464.0
offset_top = 375.0
offset_right = 536.0
offset_bottom = 447.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("24_5186w")

[node name="exit_mobile" type="TouchScreenButton" parent="FirstCollidePowerUp/MostIgnoreRuleDescription/exit_bttn_of_MIR"]
position = Vector2(36, 36)
shape = SubResource("RectangleShape2D_b7tfj")

[connection signal="pressed" from="PauseUI/Pause/PausePanel/Resume" to="PauseUI/Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseUI/Pause/PausePanel/Resume/Resume" to="PauseUI/Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseUI/Pause/PausePanel/Quit" to="PauseUI/Pause" method="_on_quit_pressed"]
[connection signal="pressed" from="PauseUI/Pause/PausePanel/Quit/Quit" to="PauseUI/Pause" method="_on_quit_pressed"]
[connection signal="timeout" from="EnemySpawnpoint" to="." method="_on_enemy_spawnpoint_timeout"]
[connection signal="pressed" from="AboutGame/gameabout" to="AboutGame" method="_on_gameabout_pressed"]
[connection signal="pressed" from="FirstCollidePowerUp/AntiVirusDescription/exit_bttn_of_AntiVirus" to="." method="_on_exit_bttn_of_antivirus"]
[connection signal="pressed" from="FirstCollidePowerUp/AntiVirusDescription/exit_bttn_of_AntiVirus/exit_mobile" to="." method="_on_exit_bttn_of_antivirus"]
[connection signal="pressed" from="FirstCollidePowerUp/MedkitDescription/exit_bttn_of_Medkit" to="." method="_on_exit_bttn_of_medkit"]
[connection signal="pressed" from="FirstCollidePowerUp/MedkitDescription/exit_bttn_of_Medkit/exit_mobile" to="." method="_on_exit_bttn_of_medkit"]
[connection signal="pressed" from="FirstCollidePowerUp/FirewallDescription/exit_bttn_of_Firewall" to="." method="_on_exit_bttn_of_firewall"]
[connection signal="pressed" from="FirstCollidePowerUp/FirewallDescription/exit_bttn_of_Firewall/exit_mobile" to="." method="_on_exit_bttn_of_firewall"]
[connection signal="pressed" from="FirstCollidePowerUp/ShieldDescription/exit_bttn_of_EShields" to="." method="_on_exit_bttn_of_eShields"]
[connection signal="pressed" from="FirstCollidePowerUp/ShieldDescription/exit_bttn_of_EShields/exit_mobile" to="." method="_on_exit_bttn_of_eShields"]
[connection signal="pressed" from="FirstCollidePowerUp/PassRocketsDescription/exit_bttn_of_PassRockets" to="." method="_on_exit_bttn_of_passrockets"]
[connection signal="pressed" from="FirstCollidePowerUp/PassRocketsDescription/exit_bttn_of_PassRockets/exit_mobile" to="." method="_on_exit_bttn_of_passrockets"]
[connection signal="pressed" from="FirstCollidePowerUp/DPBDescription/exit_bttn_of_DPB" to="." method="_on_exit_bttn_of_dpb_pressed"]
[connection signal="pressed" from="FirstCollidePowerUp/DPBDescription/exit_bttn_of_DPB/exit_mobile" to="." method="_on_exit_bttn_of_dpb_pressed"]
[connection signal="pressed" from="FirstCollidePowerUp/MostIgnoreRuleDescription/exit_bttn_of_MIR" to="." method="_on_exit_bttn_of_mir_pressed"]
[connection signal="pressed" from="FirstCollidePowerUp/MostIgnoreRuleDescription/exit_bttn_of_MIR/exit_mobile" to="." method="_on_exit_bttn_of_mir_pressed"]
